[package]
name = "flowparser-sflow"
description = "Parser for sFlow v5 datagrams"
version = "0.1.1"
edition = "2024"
authors = ["michael.mileusnich@gmail.com"]
license = "MIT OR Apache-2.0"
categories = ["encoding", "network-programming", "parser-implementations"]
keywords = ["sflow", "parser", "network", "sampling"]
readme = "README.md"
repository = "https://github.com/mikemiles-dev/sflow_parser/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
nom = "7.1.3"
mac_address = { version = "1.1.5", features = ["serde"] }
serde = { version = "1.0.166", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
insta = { version = "1.30.0", features = ["yaml"] }
tokio = { version = "1.38.0", features = ["full"] }
hex = "0.4.3"
serde_json = "1.0.100"
pcap-parser = "0.17"
etherparse = "0.19"

[[bench]]
name = "flowparser_sflow_bench"
harness = false

[[bench]]
name = "flow_sample_bench"
harness = false

[[bench]]
name = "counter_sample_bench"
harness = false
